--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,23 @@
 
     <groupId>Practise</groupId>
     <artifactId>ProblemSolving</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <modules>
+        <module>Coursera</module>
+    </modules>
 
-    
+
 </project>
